# Aegis

./: .gitignore  Cargo.toml
Antigravity/: implementation_plan.md  task.md
aegis-alerts/: Cargo.toml
aegis-alerts/src/: dispatch.rs  engine.rs  lib.rs  llm.rs
aegis-api/: Cargo.toml
aegis-api/src/: handlers.rs  lib.rs
aegis-bot/: Cargo.toml
aegis-core/: Cargo.toml
aegis-core/src/: config.rs  error.rs  lib.rs  state.rs  symbols.rs  types.rs
aegis-executor/: Cargo.toml
aegis-executor/src/: guardrails.rs  kamino.rs  lib.rs  marginfi.rs  save.rs
aegis-indexer/: Cargo.toml
aegis-indexer/src/: backfill.rs  grpc.rs  lib.rs  oracle.rs  state.rs  writer.rs
aegis-indexer/src/parsers/: kamino.rs  marginfi.rs  mod.rs  save.rs
aegis-risk/: Cargo.toml
aegis-risk/src/: health.rs  lib.rs  scenario.rs
aegis-server/: Cargo.toml
aegis-server/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  env.d.ts  hooks.ts  index.css  main.tsx  mockData.ts  types.ts  utils.ts  wallet.tsx
frontend/src/components/: HealthGauge.tsx  Nav.tsx  ShieldIcon.tsx  ui.tsx  useCountUp.ts
frontend/src/pages/: Alerts.tsx  Dashboard.tsx  GuardRules.tsx  Landing.tsx  Settings.tsx  Simulator.tsx
migrations/: 20260331113449_init_schema.sql  20260408094550_change_to_table.sql  20260413120000_add_alerts_and_guardrails.sql  20260418120000_guard_rules_last_fired.sql  20260423120000_add_position_legs.sql  20260424120000_execution_intents.sql
