[workspace]
resolver = "2"
members = ["aegis-alerts", "aegis-api", "aegis-bot","aegis-core", "aegis-executor", "aegis-indexer", "aegis-risk", "aegis-server", "raydium_indexing"]

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["full"]}
futures = "0.3.32"
tonic = "0.14.5"
rustls = { version = "0.23.37", features = ["ring"]}
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"]}
chrono = { version = "0.4.44", features = ["serde"]}
dotenv = "0.15.0"

solana-sdk = "4.0.1"
solana-client = "3.1.11"
solana-account-decoder = "3.1.11"

yellowstone-grpc-client = "12.2.0"
yellowstone-grpc-proto = "12.1.0"

sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"]}

axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json"]}
tower-http = { version = "0.6.8", features = ["cors", "trace"]}

teloxide = { version = "0.17.0", features = ["macros"] }

uuid = { version = "1.23.0", features = ["v4", "serde"] }
borsh = "1.6.1"

klend-sdk = "0.1.2"
carbon-marginfi-v2-decoder = "0.12.0"

dashmap = "6.1.0"
