[package]
name = "aegis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-risk = { path = "../aegis-risk" }
aegis-alerts = { path = "../aegis-alerts" }
aegis-indexer = { path = "../aegis-indexer" }
aegis-executor = { path = "../aegis-executor" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
