[package]
name = "aegis-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
solana-sdk = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }