[package]
name = "aegis-indexer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "test-stream"
path = "src/bin/test_stream.rs"

[dependencies]
aegis-core = { path = "../aegis-core" }
tokio = { workspace = true }
futures = { workspace = true}
tonic = { workspace = true }
rustls = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
klend-sdk = { workspace = true }
borsh = { workspace = true }
carbon-marginfi-v2-decoder = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
