[package]
name = "aegis-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aegis-server"
path = "src/main.rs"

[dependencies]
aegis-core = { path = "../aegis-core" }
aegis-indexer = { path = "../aegis-indexer" }
aegis-api = { path = "../aegis-api" }
aegis-alerts = { path = "../aegis-alerts" }
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
rustls = { workspace = true }
